--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <main>
     <header>
         <div class="tittle">
-            <h1>Título principal</h1>
+            <h1>Título secundário</h1>
         </div>
     </header>
     <article>
         <p> Number 1</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam voluptatibus ex molestiae eius expedita nulla fugiat illum beatae praesentium vitae ea sit corrupti cum, sed nemo rem culpa. Sint, sed.</p>
     </article>
     <article>
         <p> Number 2</p>
